add cart & auth
