# app/serializers/item_serializer.rb
@@ -1,5 +1,5 @@
   class ItemSerializer < Panko::Serializer
     include ImagableSerializer
-
-    attributes :id, :user_id, :name, :list_price, :sale_price, :sale_rate, :description, :category_id, :image_ids
+    attributes :id, :user_id, :name, :list_price, :sale_price, :description, :category_id
+    has_many :images, serializer: ImageSerializer
   end
