# swagger/v1/swagger.yaml
@@ -4,6 +4,13 @@ info:
   title: API V1
   version: v1
   description: 인썸니아 프론트엔드 개발자 과제를 위한 백엔드 API 명세 입니다.
+components:
+  securitySchemes:
+    Bearer:
+      description: JWT key necessary to use API calls
+      type: apiKey
+      name: Authorization
+      in: header
 paths:
   "/items":
     get:
@@ -82,6 +89,8 @@ paths:
                           type: integer
                         user_id:
                           type: integer
+                        category_id:
+                          type: integer
                         name:
                           type: string
                         list_price:
@@ -92,6 +101,15 @@ paths:
                           type: string
                         category:
                           type: object
+                          properties:
+                            id:
+                              type: integer
+                            title:
+                              type: string
+                            position:
+                              type: integer
+                            image_path:
+                              type: string
                   total_count:
                     type: integer
                 required:
@@ -119,6 +137,8 @@ paths:
                     type: integer
                   user_id:
                     type: integer
+                  category_id:
+                    type: integer
                   name:
                     type: string
                   list_price:
@@ -127,49 +147,36 @@ paths:
                     type: integer
                   image_path:
                     type: string
-                  category:
-                    type: object
+                  description:
+                    type: string
+                  images:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        image_path:
+                          type: string
                 required:
                 - id
         '404':
           description: item not found
-  "/orders":
-    post:
-      summary: 장바구니 생성
+  "/cart":
+    get:
+      summary: 장바구니 조회
+      security:
+      - Bearer: []
       tags:
-      - 장바구니(LineItem)
-      parameters:
-      - name: Authorization
-        in: header
-        description: Authorization ${access_token}
-        schema:
-          type: string
+      - 주문(Order)
       responses:
-        '201':
-          description: order created
-        '422':
-          description: invalid request
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                status:
-                  type: string
-                  default: cart
-              required:
-              - status
+        '200':
+          description: order found
+  "/orders":
     get:
       summary: 주문 리스트
       tags:
       - 주문(Order)
-      parameters:
-      - name: Authorization
-        in: header
-        description: Authorization ${access_token}
-        schema:
-          type: string
       responses:
         '200':
           description: items found
@@ -200,35 +207,8 @@ paths:
                 - zipcode
                 - address1
                 - address2
-  "/line_items":
-    post:
-      summary: 장바구니 담기
-      tags:
-      - 장바구니(LineItem)
-      parameters:
-      - name: Authorization
-        in: header
-        description: Authorization ${access_token}
-        schema:
-          type: string
-      responses:
-        '201':
-          description: cart item added
-        '422':
-          description: invalid request
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                item_id:
-                  type: integer
-                quantity:
-                  type: integer
-              required:
-              - item_id
-              - quantity
+        '404':
+          description: order not found
   "/orders/{id}":
     get:
       summary: 주문 상세정보
@@ -238,11 +218,6 @@ paths:
       - name: id
         in: path
         required: true
-        schema:
-          type: string
-      - name: Authorization
-        in: header
-        description: Authorization ${access_token}
         schema:
           type: string
       responses:
@@ -282,11 +257,6 @@ paths:
       tags:
       - 주문(Order)
       parameters:
-      - name: Authorization
-        in: header
-        description: Authorization ${access_token}
-        schema:
-          type: string
       - name: id
         in: path
         required: true
@@ -326,9 +296,9 @@ paths:
               - address2
   "/?":
     post:
-      summary: 사용자 정보 확인
+      summary: Token
       tags:
-      - 사용자
+      - Cognito
       parameters:
       - name: X-Amz-Target
         in: header
@@ -366,9 +336,9 @@ paths:
               - PASSWORD
   "/":
     post:
-      summary: 사용자 생성
+      summary: Sign Up
       tags:
-      - 사용자
+      - Cognito
       parameters:
       - name: X-Amz-Target
         in: header
@@ -399,3 +369,4 @@ paths:
               - Username
 servers:
 - url: http://localhost:3000
+- url: https://cognito-idp.ap-northeast-2.amazonaws.com
